# BasicTests

./: AddNumbers.cxx  AddNumbers.h  CMakeLists.txt  README.md  prepare-commit-msg
Testing/: CMakeLists.txt  TestAddition.cxx
Utilities/: SetupGitHooks
